[package]
name = "differ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hyper = { version = "0.14.20", features = ["full"] }
text-diff = "0.4.0"
tokio = { version = "1.21.1", features = ["full"] }
url = "2.3.1"
